fixed toggle views between slider and image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
       <li class="fullDisplay">
         <img class="sliderImg" src="./assets/image/slider5.png" alt="" class="sliderImg">
       </li>
+
     </ul>
+        <a class="sliderButton"></a>
+    
   </section>
      
 
