finished incorporating feedback

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   </div>
 
 
-
+<div class="fullDisplay flex hide">
+  <img class="backgroundImg"src="./assets/image/backgroundImg.png" alt="">
+</div>
 
   <!-- header and social -->
   <section id="sliderContainer" class="hide">
@@ -42,29 +44,50 @@
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img class="sliderImg" src="./assets/image/381.svg" alt="">
       <p class="textSlider">Since we opened our doors, we have graduated 153 students from our full-time professional programs, and 228 students from our part-time foundation programs.</p>   
+      <a class="xButton' href="#">
+        <div class="xSign">+</div>
+      </a> 
     </li>
     <!-- New carousel -->
     <li class="slide">
-      
+      <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img class="imgSlider" src="./assets/image/183.svg" alt="">
-      <p class="textSlider">Red Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <i class="redText">our website.</i></p>   
+      <p class="textSlider">Red Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <i class="redText">our website.</i>
+      </p>   
+      <a class="xButton' href="#">
+        <div class="xSign">+</div>
+      </a> 
     </li>
     <!-- New carousel -->
     <li class="slide">
+      <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <!-- 112 -->
       <img src="./assets/image/112.svg" alt="">
-      <p class="textSlider">Full-time students have been employed since we opened our doors. They now work as UX designers, front-end developers, and digital marketers at companies like Telus, DDB, Idea Rebel, Samsung, Oak + Fort, Briteweb, Sportcheck, Pound & Grain, Yellow Pages just to name a few. Interested in becoming our hiring partner? Get in touch with <i class="redText">Chris Doege</i></p>   
+      <p class="textSlider">Full-time students have been employed since we opened our doors. They now work as UX designers, front-end developers, and digital marketers at companies like Telus, DDB, Idea Rebel, Samsung, Oak + Fort, Briteweb, Sportcheck, Pound & Grain, Yellow Pages just to name a few. Interested in becoming our hiring partner? Get in touch with <i class="redText">Chris Doege</i>
+      </p>   
+      <a class="xButton' href="#">
+        <div class="xSign">+</div>
+      </a> 
     </li>
     <!-- New carousel -->
     <li class="slide">
+      <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <!-- >30 -->
       <img class="sliderImg" src="./assets/image/30.svg" alt="">
-      <p class="textSlider">We partnered with the School Fund to support children education in developing countries. Since we opened our doors, we helped over 30 children get high-quality education in Africa by donating and raising over $30,000. To sponsor a student and make your impact, head to <i class="redText">theschoolfund.org</i>.</p>   
+      <p class="textSlider">We partnered with the School Fund to support children education in developing countries. Since we opened our doors, we helped over 30 children get high-quality education in Africa by donating and raising over $30,000. To sponsor a student and make your impact, head to <i class="redText">theschoolfund.org</i>.
+      </p>   
+      <a class="xButton' href="#">
+        <div class="xSign">+</div>
+      </a> 
     </li>
     <!-- New carousel -->
     <li class="slide">
-      <img class="sliderImg" src="./assets/image/slider4.png" alt="">
-      <p class="textSlider">Since we opened our doors, we have graduated 153 students from our full-time professional programs, and 228 students from our part0time foundation programs.</p>   
+      <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
+      <img class="sliderImg" src="./assets/image/thankYou.png" alt="">
+      <p class="textSlider">Since we opened our doors, we have graduated 153 students from our full-time professional programs, and 228 students from our part0time foundation programs.</p> 
+      <a class="xButton' href="#">
+        <div class="xSign">+>
+      </a>  
     </li>
     <!-- New carousel -->
     
