--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img class="imgSlider" src="./assets/image/183.svg" alt="">
-      <p class="textSlider">Red Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <i class="redText">our website.</i>
+      <p class="textSlider">Red Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <a class="redText" href="https://www.redacademy.com/">our website.</a>
       </p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
@@ -61,7 +61,6 @@
     <!-- New carousel -->
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
-      <!-- 112 -->
       <img src="./assets/image/112.svg" alt="">
       <p class="textSlider">Full-time students have been employed since we opened our doors. They now work as UX designers, front-end developers, and digital marketers at companies like Telus, DDB, Idea Rebel, Samsung, Oak + Fort, Briteweb, Sportcheck, Pound & Grain, Yellow Pages just to name a few. Interested in becoming our hiring partner? Get in touch with <i class="redText">Chris Doege</i>
       </p>   
@@ -72,9 +71,8 @@
     <!-- New carousel -->
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
-      <!-- >30 -->
       <img class="sliderImg" src="./assets/image/30.svg" alt="">
-      <p class="textSlider">We partnered with the School Fund to support children education in developing countries. Since we opened our doors, we helped over 30 children get high-quality education in Africa by donating and raising over $30,000. To sponsor a student and make your impact, head to <i class="redText">theschoolfund.org</i>.
+      <p class="textSlider">We partnered with the School Fund to support children education in developing countries. Since we opened our doors, we helped over 30 children get high-quality education in Africa by donating and raising over $30,000. To sponsor a student and make your impact, head to <a class="redText" href="https://theschoolfund.org/cgi-bin/dyn?c=info&t=home">theschoolfund.org</a>.
       </p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
