--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Red Christmas</title>
+  <title>RED Christmas</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jquery.bxslider.css">
@@ -37,8 +37,8 @@
     <ul class="bxslider">
      <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
-      <img class="sliderImg" src="./assets/image/381.svg" alt="">
-      <p class="textSlider">Since we opened our doors, we have graduated 153 students from our full-time professional programs, and 228 students from our part-time foundation programs.</p>   
+      <img class="sliderImg" src="./assets/image/620.svg" alt="">
+      <p class="textSlider">Since we opened our doors, we have graduated 250 students from our full-time professional programs, and 370 students from our part-time foundation programs.</p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
       </a> 
@@ -47,7 +47,7 @@
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img class="imgSlider" src="./assets/image/183.svg" alt="">
-      <p class="textSlider">Red Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <a class="redText" href="https://www.redacademy.com/">our website.</a>
+      <p class="textSlider">RED Academy students work with real clients on real projects. In 2016, we receieved 237 applications and successfully designed, marketed and developed 183 of them. To see examples or submit your project, head to <a class="redText" target="blank" href="https://www.redacademy.com/">our website.</a>
       </p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
@@ -57,7 +57,8 @@
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img src="./assets/image/112.svg" alt="">
-      <p class="textSlider">Full-time students have been employed since we opened our doors. They now work as UX designers, front-end developers, and digital marketers at companies like Telus, DDB, Idea Rebel, Samsung, Oak + Fort, Briteweb, Sportcheck, Pound & Grain, Yellow Pages just to name a few. Interested in becoming our hiring partner? Get in touch with <i class="redText">Chris Doege</i>
+      <p class="textSlider">Full-time students have been employed since we opened our doors. They now work as UX designers, front-end developers, and digital marketers at companies like Telus, DDB, Idea Rebel, Samsung, Oak + Fort, Briteweb, Sportcheck, Pound & Grain, Yellow Pages just to name a few. Interested in becoming our hiring partner? Get in touch with
+      <a href="https://ca.linkedin.com/in/chrisdoege" class="redText">Chris Doege</a>.
       </p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
@@ -66,8 +67,8 @@
     <!-- New carousel -->
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
-      <img class="sliderImg" src="./assets/image/30.svg" alt="">
-      <p class="textSlider">We partnered with the School Fund to support children education in developing countries. Since we opened our doors, we helped over 30 children get high-quality education in Africa by donating and raising over $30,000. To sponsor a student and make your impact, head to <a class="redText" href="https://theschoolfund.org/cgi-bin/dyn?c=info&t=home">theschoolfund.org</a>.
+      <img class="sliderImg" src="./assets/image/90.svg" alt="">
+      <p class="textSlider">We partnered with the School Fund to support childrens' education in developing countries. This year we have made direct donations and helped to raise over $30k in campaigns, which will help to fund 90 children's education this year. To sponsor a student and make your impact, head to <a class="redText" target="blank" href="https://theschoolfund.org/cgi-bin/dyn?c=info&t=home">theschoolfund.org</a>.
       </p>   
       <a class="xButton' href="#">
         <div class="xSign">+</div>
@@ -77,9 +78,9 @@
     <li class="slide">
       <img class="headerReview" src="./assets/image/headerReview.svg" alt="">
       <img class="sliderImg" src="./assets/image/thankYou.png" alt="">
-      <p class="textSlider">Since we opened our doors, we have graduated 153 students from our full-time professional programs, and 228 students from our part0time foundation programs.</p> 
+      <p class="textSlider">We could not have done this without you and all the amazing support we received from our partners, students, teachers, mentors. Here is to another amazing year with you where together we can make true impact. Lots of love to you in 2017 from the RED family!</p> 
       <a class="xButton' href="#">
-        <div class="xSign">+>
+        <div class="xSign">+</div>
       </a>  
     </li>
     <!-- New carousel -->
